# JR-AutoRAG

./: .gitignore  Dockerfile.web  README.md  build.ts  docker-compose.yml  onboarding.txt  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: main.py  services.py  state.py
api/app/core/: __init__.py  config_store.py  documents.py  gatherer.py  ingest.py  orchestrator.py  planner.py  providers.py  retrieval.py  telemetry.py
api/app/routers/: __init__.py  config.py  documents.py  evaluation.py  health.py  monitoring.py  providers.py  query.py
api/app/schemas/: config.py  documents.py  evaluation.py  query.py
api/tests/: conftest.py
api/tests/api/: test_endpoints.py
src/: App.tsx  index.html  types.ts
src/components/features/: ChatInterface.tsx  IngestPanel.tsx  ProviderConfig.tsx  TraceLog.tsx
src/lib/: utils.test.ts
